--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jm-weapp",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "general weapp service",
   "main": "./lib/index",
   "scripts": {
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/jm-root/jm-weapp",
   "dependencies": {
     "axios": "^0.18.0",
+    "config": "^3.1.0",
+    "ioredis": "^4.9.5",
     "jm-server": "^1.0.6"
   },
   "devDependencies": {
@@ -36,5 +38,8 @@
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
     "jest": "^22.4.3"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
