--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,12 @@
 *.md
-node_modules
+.git
+.gitignore
+.vscode
+LICENSE
+VERSION
+spec
+coverage
 tests
-benchmark
+Dockerfile
+jest.config.js
 spec
