--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "jm-weapp",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "general weapp service",
   "main": "./lib/index",
   "scripts": {
-    "start": "jm-server",
-    "cluster": "jm-server --cluster",
-    "test": "jest"
+    "start": "npx jm-server",
+    "cluster": "npx jm-server --cluster",
+    "test": "jest",
+    "lint": "standard",
+    "lint:fix": "standard --fix"
   },
   "repository": {
     "type": "git",
@@ -24,20 +26,41 @@
     "url": "https://github.com/jm-root/jm-weapp/issues"
   },
   "homepage": "https://github.com/jm-root/jm-weapp",
+  "lint-staged": {
+    "**/*.js": [
+      "npm run lint:fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "standard": {
+    "env": [
+      "jest"
+    ],
+    "ignore": [
+      "**/dist/"
+    ]
+  },
   "dependencies": {
     "axios": "^0.18.0",
-    "config": "^3.1.0",
-    "ioredis": "^4.9.5",
-    "jm-server": "^1.0.6"
+    "config": "^3.2.4",
+    "ioredis": "^4.14.1",
+    "jm-err": "^1.0.7",
+    "jm-log4js": "^2.0.5",
+    "jm-server": "^2.0.9",
+    "jm-server-jaeger": "^0.0.3",
+    "log4js": "^6.1.0"
   },
   "devDependencies": {
-    "benchmark": "^2.1.4",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "jest": "^22.4.3"
+    "husky": "^1.2.0",
+    "jest": "^23.1.0",
+    "lerna": "^2.11.0",
+    "lint-staged": "^8.1.0",
+    "standard": "^12.0.1"
   },
   "jest": {
     "testEnvironment": "node"
